Fixes help button alignment within fieldsets (#264)
Fix: Help button alignment within fieldsets

--- a/manon/form-help-variables.scss
+++ b/manon/form-help-variables.scss
@@ -6,13 +6,13 @@
   --form-help-padding-right: 3rem;
 
   /* Button */
-  --form-help-button-width: 1rem;
-  --form-help-button-height: 1rem;
+  --form-help-button-width: 1.25rem;
+  --form-help-button-height: 1.25rem;
 
-  --form-help-button-padding-top: 0.5rem;
-  --form-help-button-padding-right: 0.5rem;
-  --form-help-button-padding-bottom: 0.5rem;
-  --form-help-button-padding-left: 0.5rem;
+  --form-help-button-padding-top: 0;
+  --form-help-button-padding-right: 0;
+  --form-help-button-padding-bottom: 0;
+  --form-help-button-padding-left: 0;
 
   --form-help-button-top: 0.75rem;
   --form-help-button-right: -2.5rem;
